# prodiusterm

./: .env.signing.example  .gitignore  Package.resolved  Package.swift  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.yml
Sources/App/: AppState.swift  Commands.swift  ProdiusTermApp.swift  ProjectWorkspaceModel.swift
Sources/Database/: DatabaseManager.swift
Sources/Models/: DevServer.swift  Group.swift  Message.swift  Project.swift  ProjectDevServer.swift  ProjectRepository.swift  ProjectTerminal.swift  ProjectTerminalLayout.swift  Session.swift  ToolCall.swift
Sources/Terminal/: TerminalSessionManager.swift
Sources/Theme/: TerminalTheme.swift
Sources/Views/: ContentView.swift  SettingsView.swift
Sources/Views/Project/: BentoGridView.swift  ProjectWindowView.swift  (+1 more)
app/: layout.tsx  page.tsx
components/: DirectoryPicker.tsx  WorkspaceSetupDialog.tsx  WorktreePanel.tsx
components/NewSessionDialog/: CreatingOverlay.tsx  NewSessionDialog.types.ts  index.tsx
components/Projects/: NewProjectDialog.types.ts  ProjectCard.tsx  ProjectSettingsDialog.tsx  ProjectsSection.tsx
components/SessionList/: SessionList.types.ts  index.tsx
components/views/: DesktopView.tsx  types.ts
data/sessions/: index.ts  queries.ts
hooks/: useWorkspaceSetup.ts  useWorktreeManager.ts
lib/: panes.ts  providers.ts  workspace-config.ts  worktrees.ts
lib/db/: index.ts
lib/providers/: registry.ts
scripts/: prepare-bundle.sh
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
(+9 files in other folders)
