[package]
name = "prodiusterm"
version = "0.3.0"
description = "ProdiusTerm Desktop - Agentic terminal workspace"
authors = ["Cristian Prodius"]
edition = "2021"

[[bin]]
name = "ProdiusTerm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "=2.10.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
